--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^4.3.8",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "aws-amplify": "^5.0.16",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.0",
     "next": "13.2.0",
